---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 2020-08-09
  Features:
    - Added purified titanium ore.
    - Added titanium processing technology.
  Changes:
    - Changed titanium recipes to be unlocked by titanium processing technology.
    - Changed titanium plate to be smelted from purified titanium ore.
    - Made nanobots technology dependent on titanium processing technology.
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2020-08-09
  Bugfixes:
    - Fixed 1.3.0-A: Nanobots recipe is enabled by default.
    - Fixed 1.3.0-B: Nanobots technology research cost is wrong.
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2020-06-25
  Features:
    - Added titanium ore.
    - Added titanium plate.
    - Added titanium gear wheel.
    - Added titanium chest.
    - Added nanobots.
    - Added nanobots technology.
    - Added nano lubricant.
    - Added nano lubricant technology.
---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 2020-05-29
  Changes:
    - Separated graphics assets into spicy-teeth-core_assets mod to allow assets
      and functional elements to be updated independently.
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 2020-05-28
  Changes:
    - Added extended logistics item group.
    - Adjusted smoke colors for refined lubricant recipe.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2020-05-27
  Features:
    - Added aerated lubricant.
    - Added aerated lubricant technology.
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2020-05-26
  Changes: