@@ -1,1 +1,8 @@
-data.raw["resource"]["stone"].map_color = {0.483, 0.428, 0.299}
+-- store prototypes to change locally so they don't have to be retrieved more than once
+local resource_stone = data.raw["resource"]["stone"]
+-- /store prototypes to change
+
+
+
+-- change map color of stone
+resource_stone.map_color = {0.483, 0.428, 0.299}
