@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: version
+Date: releasedate
+  Changes:
+    - [Internal only] Changed how prototypes are modified in data-final-fixes.
+---------------------------------------------------------------------------------------------------
 Version: 1.4.0
 Date: 2020-08-09
   Features:
